/**
 * Generated by orval v8.12.3 🍺
 * Do not edit manually.
 * GreenEcoCommerce API
 * API GreenEcoCommerce app - app for buying and selling green products
 * OpenAPI spec version: v1
 */

export interface CategoryDto {
  id: string;
  name: string;
  /** @nullable */
  description?: string | null;
  /** @nullable */
  parentId?: string | null;
}
