/**
 * Generated by orval v8.23.0 🍺
 * Do not edit manually.
 * GreenEcoCommerce API
 * API GreenEcoCommerce app - app for buying and selling green products
 * OpenAPI spec version: v1
 */
import type { ChatRole } from './chatRole';

export interface ChatMessageDto {
  role: ChatRole;
  content: string;
}
