/**
 * Generated by orval v8.12.3 🍺
 * Do not edit manually.
 * GreenEcoCommerce API
 * API GreenEcoCommerce app - app for buying and selling green products
 * OpenAPI spec version: v1
 */

export interface ChatSessionDto {
  id: string;
  userId: string;
  title: string;
  createdAt: string;
}
