/**
 * Generated by orval v8.23.0 🍺
 * Do not edit manually.
 * GreenEcoCommerce API
 * API GreenEcoCommerce app - app for buying and selling green products
 * OpenAPI spec version: v1
 */
import type { DocumentFileTypeEnum } from './documentFileTypeEnum';

export interface DocumentDto {
  id: string;
  uploadedBy: string;
  fileName: string;
  fileType: DocumentFileTypeEnum;
  fileUrl: string;
  createdAt: Date;
  embeddingCount: number;
}
