/**
 * Generated by orval v8.20.0 🍺
 * Do not edit manually.
 * GreenEcoCommerce API
 * API GreenEcoCommerce app - app for buying and selling green products
 * OpenAPI spec version: v1
 */
import type { PointTransactionDto } from './pointTransactionDto';

export interface GreenWalletDto {
  balance: number;
  earnedTotal: number;
  transactions: PointTransactionDto[];
}
