/**
 * Generated by orval v8.20.0 🍺
 * Do not edit manually.
 * GreenEcoCommerce API
 * API GreenEcoCommerce app - app for buying and selling green products
 * OpenAPI spec version: v1
 */
import type { MaterialTypeEnum } from './materialTypeEnum';

export interface MaterialDto {
  id: string;
  name: string;
  type: MaterialTypeEnum;
  ecoRating: number;
}
