/**
 * Generated by orval v8.20.0 🍺
 * Do not edit manually.
 * GreenEcoCommerce API
 * API GreenEcoCommerce app - app for buying and selling green products
 * OpenAPI spec version: v1
 */
import type { OrderStatusEnum } from './orderStatusEnum';

export interface OrderDto {
  id: string;
  userId: string;
  status: OrderStatusEnum;
  deliveryAddress: string;
  discountAmount: number;
  earnedPoints: number;
  createdAt: string;
}
