/**
 * Generated by orval v8.20.0 🍺
 * Do not edit manually.
 * GreenEcoCommerce API
 * API GreenEcoCommerce app - app for buying and selling green products
 * OpenAPI spec version: v1
 */

export interface OrderItemDto {
  productId: string;
  quantity: number;
  unitPrice: number;
  unitCo2Saved: number;
}
