/**
 * Generated by orval v8.20.0 🍺
 * Do not edit manually.
 * GreenEcoCommerce API
 * API GreenEcoCommerce app - app for buying and selling green products
 * OpenAPI spec version: v1
 */

export interface PointTransactionDto {
  id: string;
  amount: number;
  description: string;
  /** @nullable */
  orderId: string | null;
  createdAt: string;
}
