/**
 * Generated by orval v8.20.0 🍺
 * Do not edit manually.
 * GreenEcoCommerce API
 * API GreenEcoCommerce app - app for buying and selling green products
 * OpenAPI spec version: v1
 */
import type { RoleEnum } from './roleEnum';

export interface UserDto {
  id: string;
  avatar: string;
  email: string;
  passwordHash: string;
  firstName: string;
  lastName: string;
  phone: string;
  address: string;
  role: RoleEnum;
  createdAt: string;
}
