@startuml CDM
!theme plain
hide circle

' ================= PACKAGES & ENTITIES =================

package "Identity & Access" {
  entity "USER" as user #E8F4FF {
    * id
    --
    email
    password_hash
    first_name
    last_name
    phone
    address
    role
    created_at
    updated_at
  }
}

package "Catalog & Inventory" {
  entity "CATEGORY" as category #E8F8F5 {
    * id
    --
    name
    description
  }

  entity "PRODUCT" as product #E9F7EF {
    * id
    ---
    name
    description
    price
    stock_qty
    carbon_index
    baseline_carbon_index
    decompose_percent
    recycle_percent
    image_url
    is_active
  }

  entity "MATERIAL" as material #E8F8F5 {
    * id
    --
    name
    type
    eco_rating
  }
}

package "Sales & Checkout" {
  entity "CART" as cart #FEF9E7 {
    * id
    --
    updated_at
  }

  entity "CART_ITEM" as cart_item #FEF9E7 {
    * id
    --
    quantity
  }

  entity "ORDER" as order #FDEDEC {
    * id
    --
    status
    delivery_address
    discount_amount
    earned_points
    created_at
  }

  entity "ORDER_ITEM" as order_item #FDEDEC {
    * id
    --
    quantity
    unit_price
    unit_co2_saved
  }

  entity "PAYMENT" as payment #FDEDEC {
    * id
    --
    method
    status
    amount
    transaction_ref
    created_at
  }
}

package "Eco Rewards System" {
  entity "GREEN_WALLET" as green_wallet #E9F7EF {
    * id
    --
    balance
    earned_total
    updated_at
  }

  entity "POINT_TRANSACTION" as point_transaction #E9F7EF {
    * id
    --
    amount
    type
    description
    created_at
  }
}

package "AI Chatbot System" {
  entity "CHAT_SESSION" as chat_session #F4ECF7 {
    * id
    --
    title
    created_at
  }

  entity "CHAT_MESSAGE" as chat_message #F4ECF7 {
    * id
    --
    role
    content
    metadata
    created_at
  }

  entity "DOCUMENT" as document #F2F3F4 {
    * id
    --
    file_name
    file_type
    file_url
    created_at
  }

  entity "EMBEDDING" as embedding #F2F3F4 {
    * id
    --
    chunk_text
    vector_id
  }
}

' ================= RELATIONSHIPS =================

user ||--|| cart : "1 - 1"
cart ||--o{ cart_item : "1 - 0..*"

category |o--o{ category : "0..1 - 0..*"
category ||--o{ product : "1 - 0..*"
product ||--o{ cart_item : "1 - 0..*"

user ||--o{ order : "1 - 0..*"
order ||--o{ order_item : "1 - 0..*"
product ||--o{ order_item : "1 - 0..*"

user ||--|| green_wallet : "1 - 1"
green_wallet ||--o{ point_transaction : "1 - 0..*"
order |o--|| point_transaction : "0..1 - 1"
order ||--o| payment : "1 - 0..1"

user ||--o{ chat_session : "1 - 0..*"
chat_session ||--o{ chat_message : "1 - 0..*"
user ||--o{ document : "1 - 0..*"
document ||--o{ embedding : "1 - 0..*"
product }o--|{ material : "0..* - 1..*"

green_wallet -[hidden]- embedding

@enduml
